--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,13 +2,10 @@
     margin: 0;
     padding: 0;
 }
-html{
+html,body{
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-}
-body{
-    height: 100%;
     color: #333;
 }
 
